--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 
 {
-  "name": "aetheris-silent-growth",
+  "name": "chroma-xo",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@google/genai": "^1.38.0",
-    "lucide-react": "^0.462.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "lucide-react": "^0.454.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
@@ -22,7 +22,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.6.3",
-    "vite": "^6.0.1"
+    "typescript": "^5.7.2",
+    "vite": "^6.0.3"
   }
 }
